--- a/web/components/DraftDashboard/DraftDashboard.module.scss
+++ b/web/components/DraftDashboard/DraftDashboard.module.scss
@@ -25,6 +25,11 @@
   box-shadow: v.$box-shadow-default;
 }
 
+/* =================== Suggested Picks Row =================== */
+.suggestedSection {
+  width: 100%;
+}
+
 /* =================== Three Panel Layout =================== */
 .mainContent {
   display: grid;
