--- a/web/styles/vars.scss
+++ b/web/styles/vars.scss
@@ -427,6 +427,21 @@ $z-desktop-toast: 650;
   -webkit-box-orient: vertical;
 }
 
+// Utility: reset default button styles while preserving semantics
+@mixin reset-button {
+  -webkit-appearance: none;
+  appearance: none;
+  background: transparent;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
+  line-height: inherit;
+  text-align: inherit;
+  cursor: pointer;
+}
+
 // =============================================
 // Functions
 // =============================================
